--- a/css_lec_2/css_lec2.html
+++ b/css_lec_2/css_lec2.html
@@ -15,6 +15,31 @@
     </div>
     <!--link-->
     <a href="www.google.com">Click me Google</a>
+    <!--font related properties apply here-->
+    <p id="para2">this is paragraph for font related properties</p>
+    <!--curson property-->
+    <div style="border: 1px solid red; cursor:all-scroll;">
+        a div
+    </div>
+    <!--box shadow-->
+    <div style="border: 1px solid green; margin: 20px; box-shadow: 5px 5px grey;">
+        an other div</div>
+
+    <!-- to give multiple box shadow-->
+    <div style="border: 1px solid green; margin: 20px; box-shadow: 5px 5px grey, -5px -5px green;">
+        an other div</div>
+    <!--opcaity 0= fully transparent, 1 no transparent -->
+    <div style="background-color: blue; opacity:0.2 ;">
+        this is another div
+    </div>
+    <!--css overflow-->
+    <div style="width:50px;height: 100px; overflow:auto">
+        <p>this is some paragraph.this is some paragraph</p>
+    </div>
+    <!--resize -->
+    <textarea style="resize:none; height: 200px;"></textarea>
+    <!--we can apply resize on block elements however overflow must be not visible to apply this-->
+    <div style="border:1px solid red; resize:both; overflow:hidden;">some div</div>
 </body>
 
 </html>
